tests/cases/compiler-development/artifact/errors/diagnostic-struct-literal-extra-field.diagnostic
diagnostic error code=T0001 family=type message="extra field 'y' in struct literal for 'Point'" sources=1 labels=2 notes=1 helps=1
  Source source_id=0 kind=file path="tests/cases/structs/errors/struct-literal-extra-field.ari" display="tests/cases/structs/errors/struct-literal-extra-field.ari" bytes=103
  Label index=0 role=primary source_id=0 source="tests/cases/structs/errors/struct-literal-extra-field.ari" line=6 column=32 end_line=6 end_column=33 byte_start=78 byte_end=79 message=""
  Snippet label=0 text="  --> tests/cases/structs/errors/struct-literal-extra-field.ari:6:32\n   |\n 6 |   let point = Point { x: 1, y: 2 };\n   |                                ^"
  Label index=1 role=secondary source_id=0 source="tests/cases/structs/errors/struct-literal-extra-field.ari" line=1 column=8 end_line=1 end_column=13 byte_start=7 byte_end=12 message="struct 'Point' declares fields 'x'"
  Snippet label=1 text="  --> tests/cases/structs/errors/struct-literal-extra-field.ari:1:8\n   |\n 1 | struct Point {\n   |        ^^^^^"
  Note index=0 location=none message="struct literal fields must match the struct declaration"
  Help index=0 location=none message="remove field 'y' or add it to struct 'Point'"
